fixed text wrapping for answers

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -43,7 +43,7 @@ nav {
 }
 
 .navSpacer {
-  height: 50px;
+  height: 80px;
 }
 
 h1 {
@@ -114,7 +114,7 @@ textarea {
 }
 
 .ansEditTextArea {
-  font-size: 12pt;
+  font-size: 12e;
 }
 
 .editLabel {
@@ -359,7 +359,7 @@ select {
 }
 
 .pText {
-  margin-top: 50px;
+  margin-bottom: 30px;
   font-size: 1.5em;
   color: white;
   text-align: center;
@@ -422,7 +422,7 @@ select {
   color: white;
   font-size: 1.5em;
   overflow-wrap: break-word;
-  width: 100%;
+  max-width: 100%;
 }
 
 .questionTextStaticMain {
@@ -432,6 +432,8 @@ select {
   color: white;
   font-size: 1.5em;
   overflow-wrap: break-word;
+  max-width: 100%;
+
   /* width: 100%; */
 }
 
